--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -20,7 +20,7 @@ jobs:
           python-version: 3.9
 
       - name: Decode keyfile.json
-        run: echo '${{ secrets.KEYFILE_JSON }}' | base64 --decode > keyfile.json
+        run: echo '${{ secrets.KEYFILE_JSON }}' | base64 --decode | jq > keyfile.json
 
       - name: Install dependencies
         run: |
