--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Decode keyfile.json
         run: echo '${{ secrets.KEYFILE_JSON }}' | base64 --decode | jq > keyfile.json
 
+      - name: Debug keyfile.json
+        run: ls -a && cat keyfile.json
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
